--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <header>Header Content</header>
+    <section>
+        Main Immage
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <fotter>
+        Social links here
+    </fotter>
 </body>
 </html>
