--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </nav>
     </header>
 
-    <section>
-        Main Immage
+    <section id="hero-outer">
+        <div id="hero-image"></div>
     </section>
 
     <section>
